--- a/cn/index-Think-Kai.html
+++ b/cn/index-Think-Kai.html
@@ -103,17 +103,20 @@
 		</div> <!-- /intro-content -->
 
 		<ul class="intro-social">
-			<li><a href="https://renkaigis.cn/" title="Home" target="_blank"><i class="fa fa-home fa-fw"></i></a></li>
-			<li><a href="https://github.com/renkaigis" title="Github" target="_blank"><i class="fa fa-github"></i></a>
+			<li><a href="https://renkaigis.cn/" title="Home" target="_blank"><i class="fa-solid fa-house fa-sm"></i></a>
+			</li>
+			<li><a href="https://github.com/renkaigis" title="Github" target="_blank"><i
+						class="fa-brands fa-github fa-sm"></i></a>
 			</li>
 			<li><a href="https://x.com/renkaigis" title="X" target="_blank"><i
 						class="fa-brands fa-x-twitter fa-sm"></i></a></li>
 			<li><a href="https://www.linkedin.com/in/renkaigis/" title="LinkedIn" target="_blank"><i
-						class="fa fa-linkedin"></i></a></li>
-			<li><a href="https://notes.renkaigis.cn" title="Notes" target="_blank"><i class="fa fa-book"></i></a></li>
+						class="fa-brands fa-linkedin fa-sm"></i></a></li>
+			<li><a href="https://notes.renkaigis.cn" title="Notes" target="_blank"><i
+						class="fa-solid fa-book fa-sm"></i></a></li>
 			<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
 			<li><a href="https://photo.renkaigis.cn/" title="Photography" target="_blank"><i
-						class="fa fa-camera"></i></a></li>
+						class="fa-solid fa-camera fa-sm"></i></a></li>
 			<li><a href="https://www.researchgate.net/profile/Kai-Ren-16" title="ResearchGate" target="_blank"><i
 						class="fa-brands fa-researchgate fa-sm"></i></a></li>
 			<li><a href="https://scholar.google.ca/citations?hl=en&user=0HgAH2IAAAAJ" title="Google Scholar"
@@ -362,53 +365,6 @@
 				</div>
 			</div>
 		</div> -->
-
-		<div class="row resume-timeline">
-			<div class="col-twelve resume-header">
-				<h2>Publications: </h2>
-			</div> <!-- /resume-header -->
-
-			<h3>一作: </h3>
-			<ul class="disc">
-				<li><b>Ren, Kai</b> and Swapan, Mohammad and Liu, Hang and Li, Linchao and Mancini, Francesco and Xiao,
-					Zhuoyao and Zhang, Xueyuan and Qu, Rui and Yu, Qiang, <a
-						href="http://dx.doi.org/10.2139/ssrn.4886409" target="_blank"
-						style="color:lightseagreen;">Identifying Climate and Environmental
-						Determinants of Spatial Disparities in Wheat Production Using a Geospatial Machine Learning
-						Model</a>.
-					Available at SSRN: https://ssrn.com/abstract=4886409 or http://dx.doi.org/10.2139/ssrn.4886409
-					(preprint)</li>
-			</ul>
-
-			<h3>合作: </h3>
-			<ul class="disc">
-				<li>Yang, L., Luo, P.,
-					Zhang, Z., Song, Y., <b>Ren, K.</b>, Zhang, C., Awange, J.,
-					Atkinson, P.M. and Meng, L., 2024. <a href="https://doi.org/10.1016/j.jag.2024.104068"
-						target="_blank" style="color:lightseagreen;">A spatio-temporal unmixing with heterogeneity model
-						for
-						the
-						identification of remotely sensed MODIS aerosols: Exemplified by the case of
-						Africa</a>.
-					<i>International Journal of Applied Earth Observation and Geoinformation</i>, 132, p.104068.
-				</li>
-				<li>Zhang, X., Song, Y., Dewan, A., Guo, Z., Cao, X., Bie, Q., Xie, Y., Ma, X., <b>Ren, K.</b>, Zhang,
-					H. and Xi, G., 2024. <a href="https://doi.org/10.1016/j.jag.2024.104004" target="_blank"
-						style="color:lightseagreen;">Ecological influence of oasisation on peripheral regions</a>.
-					<i>International Journal of Applied Earth Observation and Geoinformation</i>, 132, p.104004.
-				</li>
-			</ul>
-
-			<h3>国际会议: </h3>
-			<ul class="disc">
-				<li><b>Ren, K.</b> & Song, Y. (2023). <a href="https://yongzesong.com/cityplus-2023-proceedings/"
-						target="_blank" style="color:lightseagreen;">Local spatial heterogeneity of Wheat Yields in
-						Western Australia</a>.
-					In <i>Proceedings of City+2023@Perth International Conference on Geospatial Big Data and Artificial
-						Intelligence for Cities</i>. Perth, Curtin University.
-				</li>
-			</ul>
-		</div>
 
 		<div class="row resume-timeline">
 			<div class="col-twelve resume-header">
@@ -1109,8 +1065,6 @@
 		<div class="row">
 			<div class="col-six tab-full pull-right social">
 				<ul class="footer-social">
-					<li><a href="https://renkaigis.cn/" title="Home" target="_blank"><i
-								class="fa fa-home fa-fw"></i></a></li>
 					<li><a href="https://github.com/renkaigis" title="Github" target="_blank"><i
 								class="fa fa-github"></i></a></li>
 					<li><a href="https://x.com/renkaigis" title="X" target="_blank"><i
@@ -1119,9 +1073,6 @@
 								class="fa fa-linkedin"></i></a></li>
 					<li><a href="https://notes.renkaigis.cn" title="Notes" target="_blank"><i
 								class="fa fa-book"></i></a></li>
-					<!-- <li><a href="mailto:renkaigis@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
-					<li><a href="https://photo.renkaigis.cn/" title="Photography" target="_blank"><i
-								class="fa fa-camera"></i></a></li>
 					<li><a href="https://www.researchgate.net/profile/Kai-Ren-16" title="ResearchGate"
 							target="_blank"><i class="fa-brands fa-researchgate fa-sm"></i></a></li>
 					<li><a href="https://scholar.google.ca/citations?hl=en&user=0HgAH2IAAAAJ" title="Google Scholar"
