--- a/index.html
+++ b/index.html
@@ -390,6 +390,53 @@
 
 		<div class="row resume-timeline">
 			<div class="col-twelve resume-header">
+				<h2>Publications: </h2>
+			</div> <!-- /resume-header -->
+
+			<h3>Author: </h3>
+			<ul class="disc">
+				<li><b>Ren, Kai</b> and Swapan, Mohammad and Liu, Hang and Li, Linchao and Mancini, Francesco and Xiao,
+					Zhuoyao and Zhang, Xueyuan and Qu, Rui and Yu, Qiang, <a
+						href="http://dx.doi.org/10.2139/ssrn.4886409" target="_blank"
+						style="color:lightseagreen;">Identifying Climate and Environmental
+						Determinants of Spatial Disparities in Wheat Production Using a Geospatial Machine Learning
+						Model</a>.
+					Available at SSRN: https://ssrn.com/abstract=4886409 or http://dx.doi.org/10.2139/ssrn.4886409
+					(preprint)</li>
+			</ul>
+
+			<h3>Co-author: </h3>
+			<ul class="disc">
+				<li>Yang, L., Luo, P.,
+					Zhang, Z., Song, Y., <b>Ren, K.</b>, Zhang, C., Awange, J.,
+					Atkinson, P.M. and Meng, L., 2024. <a href="https://doi.org/10.1016/j.jag.2024.104068"
+						target="_blank" style="color:lightseagreen;">A spatio-temporal unmixing with heterogeneity model
+						for
+						the
+						identification of remotely sensed MODIS aerosols: Exemplified by the case of
+						Africa</a>.
+					<i>International Journal of Applied Earth Observation and Geoinformation</i>, 132, p.104068.
+				</li>
+				<li>Zhang, X., Song, Y., Dewan, A., Guo, Z., Cao, X., Bie, Q., Xie, Y., Ma, X., <b>Ren, K.</b>, Zhang,
+					H. and Xi, G., 2024. <a href="https://doi.org/10.1016/j.jag.2024.104004" target="_blank"
+						style="color:lightseagreen;">Ecological influence of oasisation on peripheral regions</a>.
+					<i>International Journal of Applied Earth Observation and Geoinformation</i>, 132, p.104004.
+				</li>
+			</ul>
+
+			<h3>International Conference: </h3>
+			<ul class="disc">
+				<li><b>Ren, K.</b> & Song, Y. (2023). <a href="https://yongzesong.com/cityplus-2023-proceedings/"
+						target="_blank" style="color:lightseagreen;">Local spatial heterogeneity of Wheat Yields in
+						Western Australia</a>.
+					In <i>Proceedings of City+2023@Perth International Conference on Geospatial Big Data and Artificial
+						Intelligence for Cities</i>. Perth, Curtin University.
+				</li>
+			</ul>
+		</div>
+
+		<div class="row resume-timeline">
+			<div class="col-twelve resume-header">
 				<h2>Project Experience</h2>
 			</div> <!-- /resume-header -->
 			<div class="col-twelve">
@@ -576,7 +623,7 @@
 
 		</div> <!-- /col-twelve -->
 
-		</div> <!-- /resume-timeline -->
+		<!-- </div> /resume-timeline -->
 
 		<div class="row resume-timeline">
 			<div class="col-twelve resume-header">
@@ -655,6 +702,12 @@
 
 			<h3>Activities & Honors: </h3>
 			<ul class="disc">
+				<li><b>2024</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.isprs.org/tc4-symposium2024/"
+						target="_blank"><span class="highlight_word">Comference Staff</span> of ISPRS Technical
+						Commission IV Symposium 2024. </a></li>
+				<li><b>2024</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://icipc2024.com/" target="_blank"><span
+							class="highlight_word">Organising Committee</span> of 10th International
+						Conference on Innovative Production and Construction (IPC2024). </a></li>
 				<li><b>2023</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2023_City+.png" target="_blank"><span
 							class="highlight_word">Presentation at the International
 							Conference</span>, City+2023@Perth, at
