--- a/cn/index.html
+++ b/cn/index.html
@@ -629,6 +629,13 @@
 
 			<h3>学习活动：</h3>
 			<ul class="disc">
+				<li><a href="https://www.isprs.org/tc4-symposium2024/" target="_blank"><span
+					class="highlight_word">ISPRS 国际学术会议工作人员/志愿者</span>：ISPRS 第四技术委员会，2024 年 10 月 22 日至 25 日，澳大利亚 珀斯 Frementle （2024）</a></li>
+				<li><a href="https://ipcannual.com/" target="_blank"><span
+					class="highlight_word">组织国际学术会议，组委会成员</span>：第十届创新生产与建造国际会议（IPC2024），全程参与会议的管理、组织和宣传（2024）</a></li>
+				<li><a href="https://yongzesong.com/cityplus-2023-committee/" target="_blank"><span
+					class="highlight_word">组织国际学术会议，组委会成员</span>：城市研究国际青年学者会议
+				City+2023@Perth，会议主题为“城市地理空间大数据和人工智能”，全程参与会议的管理、组织和宣传（2023）</a></li>
 				<li><a href="../images/2023_City+.png" target="_blank"><span class="highlight_word">参加 2023 年澳大利亚珀斯举办的
 							City+ 城市研究国际青年学者会议</span>，并在 “空间分析方法” <span class="highlight_word">分会议上做报告</span>（2023）</a>
 				</li>
