--- a/index.html
+++ b/index.html
@@ -707,9 +707,9 @@
 			<ul class="disc">
 				<li><b>2024</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.isprs.org/tc4-symposium2024/"
 						target="_blank"><span class="highlight_word">Comference Staff</span> of ISPRS Technical
-						Commission IV Symposium 2024. </a></li>
-				<li><b>2024</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://icipc2024.com/" target="_blank"><span
-							class="highlight_word">Organising Committee</span> of 10th International
+						Commission IV Symposium 2024. October 22 - 25, 2024, Fremantle, Perth, Australia.					</a></li>
+				<li><b>2024</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ipcannual.com/" target="_blank">One of the <span
+							class="highlight_word">Organising Committees</span> of 10<sup>th</sup> International
 						Conference on Innovative Production and Construction (IPC2024). </a></li>
 				<li><b>2023</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2023_City+.png" target="_blank"><span
 							class="highlight_word">Presentation at the International
@@ -724,7 +724,7 @@
 						Intelligence for Cities</a></li>
 				<li><b>2022</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2022_Provincial_Bronze_Award.jpg"
 						target="_blank"><span class="highlight_word">Won the Bronze Award (Provincial Level)</span> in
-						the 11th "Challenger
+						the 11<sup>st</sup> "Challenger
 						Cup" Shaanxi
 						University Student Entrepreneurship Plan Competition</a></li>
 				<li><b>2022</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2022_School_Silver_Award.jpg"
