--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
 						Cup" Shaanxi
 						University Student Entrepreneurship Plan Competition</a></li>
 				<li><b>2022</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2022_School_Silver_Award.jpg"
-						target="_blank">Participated in the 10th Challenge Cup College Student
+						target="_blank">Participated in the 10<sup>th</sup> Challenge Cup College Student
 						Entrepreneurship Plan Competition of Northwest A&F
 						University and <span class="highlight_word">Won the Silver Award</span> in the Final</a></li>
 				<li><b>2021</b>&nbsp;&nbsp;&nbsp;&nbsp;<span class="highlight_word">First‐Class Scholarship</span> of
