--- a/cn/index.html
+++ b/cn/index.html
@@ -75,9 +75,7 @@
 	<!-- intro section
    ================================================== -->
 	<section id="intro">
-
 		<div class="intro-overlay"></div>
-
 		<div class="intro-content">
 			<div class="row">
 
@@ -137,9 +135,9 @@
 				<div class="col-twelve">
 					<a class="button stroke " href="../" target="_blank">English >></a>
 				</div>
-				<h5>About</h5>
+				<h1>About</h1>
 				<h6></h6>
-				<h1 style="font-family:KaiTi">热爱，是为了更好 …</h1>
+				<h3 style="font-family:KaiTi">热爱，是为了更好 …</h3>
 
 				<div class="intro-info">
 					<img src="../images/profile-pic.jpg" alt="Profile Picture">
@@ -233,14 +231,14 @@
 
 	<!-- resume Section
    ================================================== -->
-	<section id="resume" class="grey-section">
+	<section id="education" class="grey-section">
 
 		<div class="row section-intro">
 			<div class="col-twelve">
 
-				<h5>Resume</h5>
+				<h1>Education</h1>
 				<h6></h6>
-				<h1 style="font-family:KaiTi">你想知道的，我来告诉你 …</h1>
+				<h3 style="font-family:KaiTi">你想知道的，我来告诉你 …</h3>
 				<aside class="pull-quote">
 					<blockquote>
 						<p>世界那么大，我 —— 渺小而伟大！</p>
@@ -251,9 +249,9 @@
 		</div> <!-- /section-intro-->
 
 		<div class="row resume-timeline">
-			<div class="col-twelve resume-header">
+			<!-- <div class="col-twelve resume-header">
 				<h2>教育程度（Education）</h2>
-			</div> <!-- /resume-header -->
+			</div> -->
 			<div class="col-twelve">
 				<div class="timeline-wrap">
 					<div class="timeline-block">
@@ -365,11 +363,27 @@
 				</div>
 			</div>
 		</div> -->
+	</section>
 
+		<section id="publications">
+
+			<div class="row section-intro">
+				<div class="col-twelve">
+		
+					<h1>Publications</h1>
+					<h3 style="text-transform: uppercase;">Be better.</h3>
+					<!-- <aside class="pull-quote">
+						<blockquote>
+							<p>Something more about me!</p>
+						</blockquote>
+					</aside> -->
+		
+				</div>
+			</div>
 		<div class="row resume-timeline">
-			<div class="col-twelve resume-header">
+			<!-- <div class="col-twelve resume-header">
 				<h2>Publications: </h2>
-			</div> <!-- /resume-header -->
+			</div> -->
 
 			<h3>一作: </h3>
 			<ul class="disc">
@@ -412,11 +426,22 @@
 				</li>
 			</ul>
 		</div>
+		</section>
+
+	<section id="projects" class="grey-section">
+
+		<div class="row section-intro">
+			<div class="col-twelve">
+	
+				<h1>Project Experiences</h1>
+				<!-- <h5>Be better.</h5> -->
+			</div>
+		</div>
 
 		<div class="row resume-timeline">
-			<div class="col-twelve resume-header">
+			<!-- <div class="col-twelve resume-header">
 				<h2>项目经历（Project Experience）</h2>
-			</div> <!-- /resume-header -->
+			</div> -->
 			<div class="col-twelve">
 				<div class="timeline-wrap">
 					<div class="timeline-block">
@@ -553,14 +578,23 @@
 
 			</div> <!-- /timeline-wrap -->
 
-		</div> <!-- /col-twelve -->
+		</div>
 
-		</div> <!-- /resume-timeline -->
+		</div>
+	</section>
 
+	
+	<section id="awards" class="grey-section">
+		<div class="row section-intro">
+			<div class="col-twelve">
+				<h1>Achievements &amp; Awards</h1>
+				<!-- <h5>Be better.</h5> -->
+			</div>
+		</div>
 		<div class="row resume-timeline">
-			<div class="col-twelve resume-header">
+			<!-- <div class="col-twelve resume-header">
 				<h2>成果奖项（Achievements &amp; Awards）</h2>
-			</div> <!-- /resume-header -->
+			</div> -->
 
 			<h3>软件著作权：</h3>
 			<div class="table-responsive">
@@ -711,7 +745,7 @@
 
 		</div>
 
-	</section> <!-- /features -->
+	</section>
 
 
 	<!-- Portfolio Section
@@ -720,9 +754,9 @@
 
 		<div class="row section-intro">
 			<div class="col-twelve">
-				<h5>Portfolio</h5>
+				<h1>Portfolio</h1>
 				<h6></h6>
-				<h1 style="font-family:KaiTi">来时的路 …</h1>
+				<h3 style="font-family:KaiTi">来时的路 …</h3>
 				<aside class="pull-quote">
 					<blockquote>
 						<p>灯塔！ 梦想！ 前行！</p>
@@ -979,9 +1013,9 @@
 		<div class="overlay"></div>
 		<div class="row section-intro">
 			<div class="col-twelve">
-				<h5>SKILLS</h5>
+				<h1>Skills</h1>
 				<h6></h6>
-				<h1 style="font-family:KaiTi">高山仰止，景行行止</h1>
+				<h3 style="font-family:KaiTi">高山仰止，景行行止</h3>
 				<p class="lead">一枚渴望成为技术控的鸡丝儿，学习 ing …</p>
 			</div>
 		</div> <!-- /section-intro -->
@@ -1066,8 +1100,8 @@
 		<div class="row section-intro">
 			<div class="col-twelve">
 
-				<h5>联系方式</h5>
-				<h1>I'd Love to Hear From You.</h1>
+				<h1>联系方式</h1>
+				<h3 style="text-transform: uppercase;">I'd Love to Hear From You.</h3>
 
 				<p class="lead">希望有共同爱好的人能共同进步！欢迎探讨学习上的问题。</p>
 
