--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
 			</div>
 			<div class="col-twelve">
 
-				<h5>About</h5>
-				<h1>Let me introduce myself.</h1>
+				<h1>About</h1>
+				<h5>Let me introduce myself.</h5>
 
 				<div class="intro-info">
 					<img src="images/profile-pic.jpg" alt="Profile Picture">
@@ -232,13 +232,13 @@
 
 	<!-- resume Section
    ================================================== -->
-	<section id="resume" class="grey-section">
+	<section id="education" class="grey-section">
 
 		<div class="row section-intro">
 			<div class="col-twelve">
 
-				<h5>Resume</h5>
-				<h1>More of my credentials.</h1>
+				<h1>Education</h1>
+				<h5>More of my credentials.</h5>
 				<aside class="pull-quote">
 					<blockquote>
 						<p>Something more about me!</p>
@@ -249,9 +249,9 @@
 		</div> <!-- /section-intro-->
 
 		<div class="row resume-timeline">
-			<div class="col-twelve resume-header">
+			<!-- <div class="col-twelve resume-header">
 				<h2>Education</h2>
-			</div> <!-- /resume-header -->
+			</div> -->
 			<div class="col-twelve">
 				<div class="timeline-wrap">
 					<div class="timeline-block">
@@ -362,6 +362,7 @@
 				</div> <!-- /timeline-wrap -->
 			</div> <!-- /col-twelve -->
 		</div> <!-- /resume-timeline -->
+	</section>
 
 		<!-- <div class="row resume-timeline">
 			<div class="col-twelve resume-header">
@@ -390,11 +391,26 @@
 				</div>
 			</div>
 		</div> -->
+<section id="publications">
+
+	<div class="row section-intro">
+		<div class="col-twelve">
+
+			<h1>Publications</h1>
+			<h5>Be better.</h5>
+			<!-- <aside class="pull-quote">
+				<blockquote>
+					<p>Something more about me!</p>
+				</blockquote>
+			</aside> -->
+
+		</div>
+	</div>
 
 		<div class="row resume-timeline">
-			<div class="col-twelve resume-header">
+			<!-- <div class="col-twelve resume-header">
 				<h2>Publications: </h2>
-			</div> <!-- /resume-header -->
+			</div> -->
 
 			<h3>Author: </h3>
 			<ul class="disc">
@@ -437,11 +453,23 @@
 				</li>
 			</ul>
 		</div>
+	</section>
 
-		<div class="row resume-timeline">
-			<div class="col-twelve resume-header">
+	<section id="projects" class="grey-section">
+
+		<div class="row section-intro">
+			<div class="col-twelve">
+	
+				<h1>Project Experiences</h1>
+				<!-- <h5>Be better.</h5> -->
+			</div>
+		</div>
+
+		<div id="resume" class="row resume-timeline">
+			<!-- <div class="col-twelve resume-header">
 				<h2>Project Experience</h2>
-			</div> <!-- /resume-header -->
+			</div> -->
+
 			<div class="col-twelve">
 				<div class="timeline-wrap">
 					<div class="timeline-block">
@@ -625,13 +653,27 @@
 			</div> <!-- /timeline-wrap -->
 
 		</div> <!-- /col-twelve -->
+	</section>
 
-		<!-- </div> /resume-timeline -->
+		<section id="awards" class="grey-section">
+			<div class="row section-intro">
+				<div class="col-twelve">
+		
+					<h1>Achievements &amp; Awards</h1>
+					<!-- <h5>Be better.</h5> -->
+					<!-- <aside class="pull-quote">
+						<blockquote>
+							<p>Something more about me!</p>
+						</blockquote>
+					</aside> -->
+		
+				</div>
+			</div>
 
 		<div class="row resume-timeline">
-			<div class="col-twelve resume-header">
+			<!-- <div class="col-twelve resume-header">
 				<h2>Achievements &amp; Awards</h2>
-			</div> <!-- /resume-header -->
+			</div> -->
 
 			<h3>Software Copyright: </h3>
 			<div class="table-responsive">
@@ -829,11 +871,10 @@
 	<!-- Portfolio Section
    ================================================== -->
 	<section id="portfolio">
-
 		<div class="row section-intro">
 			<div class="col-twelve">
-				<h5>Portfolio</h5>
-				<h1>Check Out Some of My Works.</h1>
+				<h1>Portfolio</h1>
+				<h5>Check Out Some of My Works.</h5>
 				<aside class="pull-quote">
 					<blockquote>
 						<p>You have to believe in yourself. That's the secret of success.</p>
@@ -1152,8 +1193,8 @@
 
 		<div class="row section-intro">
 			<div class="col-twelve">
-				<h5>SKILLS</h5>
-				<h1>What Can I Do?</h1>
+				<h1>Skills</h1>
+				<h5>What Can I Do?</h5>
 				<p class="lead">There is still a lot of knowledge to learn. </p>
 			</div>
 		</div> <!-- /section-intro -->
@@ -1240,8 +1281,8 @@
 
 		<div class="row section-intro">
 			<div class="col-twelve">
-				<h5>Contact</h5>
-				<h1>I'd Love to Hear From You.</h1>
+				<h1>Contact</h1>
+				<h5>I'd Love to Hear From You.</h5>
 				<p class="lead">Hope that people with common interests can make progress together! Welcome to discuss
 					learning issues.</p>
 			</div>
