--- a/index.html
+++ b/index.html
@@ -54,19 +54,24 @@
 						<li class="current"><a class="smoothscroll" href="#intro" title=""><i
 									class="fa fa-home fa-fw"></i>&nbsp;&nbsp;Home</a></li>
 						<li><a class="smoothscroll" href="#about" title=""><i
-									class="fa  fa-user"></i>&nbsp;&nbsp;&nbsp;&nbsp;About</a></li>
-						<li><a class="smoothscroll" href="#resume" title=""><i
-									class="fa  fa-id-card-o"></i>&nbsp;&nbsp;Resume</a></li>
+									class="fa  fa-user"></i>&nbsp;&nbsp;&nbsp;About</a></li>
+						<li><a class="smoothscroll" href="#education" title=""><i
+									class="fa-solid fa-building-columns"></i>&nbsp;&nbsp;&nbsp;Education</a></li>
+						<li><a class="smoothscroll" href="#publications" title=""><i
+									class="fa-solid fa-book"></i>&nbsp;&nbsp;&nbsp;Publications</a></li>
+						<li><a class="smoothscroll" href="#projects" title=""><i
+									class="fa-solid fa-list-check"></i>&nbsp;&nbsp;&nbsp;Projects</a></li>
+						<li><a class="smoothscroll" href="#awards" title=""><i
+									class="fa-solid fa-award"></i>&nbsp;&nbsp;&nbsp;Awards</a></li>
 						<li><a class="smoothscroll" href="#portfolio" title=""><i
 									class="fa  fa-th-large"></i>&nbsp;&nbsp;&nbsp;Portfolio</a></li>
 						<li><a class="smoothscroll" href="#services" title=""><i
-									class="fa  fa-code"></i>&nbsp;&nbsp;&nbsp;Services</a></li>
+									class="fa  fa-code"></i>&nbsp;&nbsp;Skills</a></li>
 						<li><a class="smoothscroll" href="#contact" title=""><i
 									class="fa  fa-send"></i>&nbsp;&nbsp;&nbsp;Contact</a></li>
 					</ul>
 				</nav>
 			</div> <!-- /top-bar -->
-
 		</div> <!-- /row -->
 	</header> <!-- /header -->
 
@@ -270,7 +275,7 @@
 								Environment
 							</h4>
 							<p>
-								<h5>Research interests:</h5>GeoSpatial Analysis | Climate Change and Agriculture
+							<h5>Research interests:</h5>GeoSpatial Analysis | Climate Change and Agriculture
 							</p>
 						</div>
 					</div> <!-- /timeline-block -->
@@ -295,13 +300,13 @@
 								Spatial Information Technology
 							</h4>
 							<p>
-								<h5>Major Courses:</h5>Principles and Methods of Remote Sensing Analysis, Progress In
-								Land Science and 3S Technology, Frontier of Agricultural Resources and Environmental
-								Science, Advanced Plant Nutrition, Soil Physics, Etc.
+							<h5>Major Courses:</h5>Principles and Methods of Remote Sensing Analysis, Progress In
+							Land Science and 3S Technology, Frontier of Agricultural Resources and Environmental
+							Science, Advanced Plant Nutrition, Soil Physics, Etc.
 							</p>
 							<p>
-								<h5>Research interests:</h5>Spatial Interpolation Prediction of Meteorological Elements
-								| Climate Change
+							<h5>Research interests:</h5>Spatial Interpolation Prediction of Meteorological Elements
+							| Climate Change
 							</p>
 						</div>
 					</div> <!-- /timeline-block -->
@@ -323,13 +328,13 @@
 								Information System (GIS)
 							</h4>
 							<p>
-								<h5>Major Courses:</h5>GIS Principle, Remote Sensing Digital Image Processing, Virtual
-								Reality and GIS New Media, Modern Cartography, GIS Technology, Numerical Calculation,
-								Modern Physical Geography, GIS Geoscience Analysis, Etc.
+							<h5>Major Courses:</h5>GIS Principle, Remote Sensing Digital Image Processing, Virtual
+							Reality and GIS New Media, Modern Cartography, GIS Technology, Numerical Calculation,
+							Modern Physical Geography, GIS Geoscience Analysis, Etc.
 
 							</p>
 							<p>
-								<h5>Research interests:</h5>Numerical Model Simulation of Lake Hydrodynamics
+							<h5>Research interests:</h5>Numerical Model Simulation of Lake Hydrodynamics
 							</p>
 						</div>
 					</div> <!-- /timeline-block -->
@@ -350,12 +355,12 @@
 								Information
 								System (GIS) </h4>
 							<p>
-								<h5>Major Courses:</h5>
-								Database Principle and Application, Digital Mapping Principle and Method, Remote Sensing
-								Principle and Method, Object-Oriented Programming, Remote Sensing Digital Image
-								Processing, Geographic Information System, Remote Sensing Image Analysis and
-								Application, Resource and Environmental Information System, Digital Photogrammetry, Web
-								GIS, Spatial Analysis and Model, Etc.
+							<h5>Major Courses:</h5>
+							Database Principle and Application, Digital Mapping Principle and Method, Remote Sensing
+							Principle and Method, Object-Oriented Programming, Remote Sensing Digital Image
+							Processing, Geographic Information System, Remote Sensing Image Analysis and
+							Application, Resource and Environmental Information System, Digital Photogrammetry, Web
+							GIS, Spatial Analysis and Model, Etc.
 							</p>
 						</div>
 					</div> <!-- /timeline-block -->
@@ -364,7 +369,7 @@
 		</div> <!-- /resume-timeline -->
 	</section>
 
-		<!-- <div class="row resume-timeline">
+	<!-- <div class="row resume-timeline">
 			<div class="col-twelve resume-header">
 				<h2>工作经历（Job Experiences）</h2>
 			</div>
@@ -391,21 +396,21 @@
 				</div>
 			</div>
 		</div> -->
-<section id="publications">
+	<section id="publications">
 
-	<div class="row section-intro">
-		<div class="col-twelve">
+		<div class="row section-intro">
+			<div class="col-twelve">
 
-			<h1>Publications</h1>
-			<h5>Be better.</h5>
-			<!-- <aside class="pull-quote">
+				<h1>Publications</h1>
+				<h5>Be better.</h5>
+				<!-- <aside class="pull-quote">
 				<blockquote>
 					<p>Something more about me!</p>
 				</blockquote>
 			</aside> -->
 
+			</div>
 		</div>
-	</div>
 
 		<div class="row resume-timeline">
 			<!-- <div class="col-twelve resume-header">
@@ -459,13 +464,12 @@
 
 		<div class="row section-intro">
 			<div class="col-twelve">
-	
 				<h1>Project Experiences</h1>
 				<!-- <h5>Be better.</h5> -->
 			</div>
 		</div>
 
-		<div id="resume" class="row resume-timeline">
+		<div class="row resume-timeline">
 			<!-- <div class="col-twelve resume-header">
 				<h2>Project Experience</h2>
 			</div> -->
@@ -484,7 +488,8 @@
 						</div>
 						<div class="timeline-content">
 							<h4>Shaanxi Smart Agricultural Decision-Making System and Big Data Analysis Platform
-								<br><span style="color: darkblue;">Participant</span></h4>
+								<br><span style="color: darkblue;">Participant</span>
+							</h4>
 							<span>
 								<h5 style="display: inline;">Project Description:</h5>
 								Build a big data analysis platform for dryland agricultural systems and a "smart
@@ -655,20 +660,20 @@
 		</div> <!-- /col-twelve -->
 	</section>
 
-		<section id="awards" class="grey-section">
-			<div class="row section-intro">
-				<div class="col-twelve">
-		
-					<h1>Achievements &amp; Awards</h1>
-					<!-- <h5>Be better.</h5> -->
-					<!-- <aside class="pull-quote">
+	<section id="awards" class="grey-section">
+		<div class="row section-intro">
+			<div class="col-twelve">
+
+				<h1>Achievements &amp; Awards</h1>
+				<!-- <h5>Be better.</h5> -->
+				<!-- <aside class="pull-quote">
 						<blockquote>
 							<p>Something more about me!</p>
 						</blockquote>
 					</aside> -->
-		
-				</div>
+
 			</div>
+		</div>
 
 		<div class="row resume-timeline">
 			<!-- <div class="col-twelve resume-header">
@@ -749,7 +754,7 @@
 			<ul class="disc">
 				<li><b>2024</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.isprs.org/tc4-symposium2024/"
 						target="_blank"><span class="highlight_word">Comference Staff</span> of ISPRS Technical
-						Commission IV Symposium 2024. October 22 - 25, 2024, Fremantle, Perth, Australia.					</a></li>
+						Commission IV Symposium 2024. October 22 - 25, 2024, Fremantle, Perth, Australia. </a></li>
 				<li><b>2024</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ipcannual.com/" target="_blank">One of the <span
 							class="highlight_word">Organising Committees</span> of 10<sup>th</sup> International
 						Conference on Innovative Production and Construction (IPC2024). </a></li>
