--- a/cn/index.html
+++ b/cn/index.html
@@ -51,20 +51,24 @@
 
 				<nav id="main-nav-wrap">
 					<ul class="main-navigation">
-						<li class="current">
-							<a class="smoothscroll" href="#intro" title="" style="text-align: center;"><i
-									class="fa fa-home" style="margin-right: 1em;"></i>主页</a></li>
-						<li><a class="smoothscroll" href="#about" title="" style="text-align: center;"><i
-									class="fa  fa-user" style="margin-right: 1em;"></i>简介</a></li>
-						<li><a class="smoothscroll" href="#resume" title="" style="text-align: center;"><i
-									class="fa  fa-id-card-o" style="margin-right: 1em;"></i>经历</a></li>
-						<li><a class="smoothscroll" href="#portfolio" title="" style="text-align: center;"><i
-									class="fa  fa-th-large" style="margin-right: 1em;"></i>成果</a>
-						</li>
-						<li><a class="smoothscroll" href="#services" title="" style="text-align: center;"><i
-									class="fa  fa-code" style="margin-right: 1em;"></i>技能</a></li>
-						<li><a class="smoothscroll" href="#contact" title="" style="text-align: center;"><i
-									class="fa  fa-send" style="margin-right: 1em;"></i>联络</a></li>
+						<li class="current"><a class="smoothscroll" href="#intro" title=""><i
+									class="fa fa-home fa-fw"></i>&nbsp;&nbsp;Home</a></li>
+						<li><a class="smoothscroll" href="#about" title=""><i
+									class="fa  fa-user"></i>&nbsp;&nbsp;&nbsp;About</a></li>
+						<li><a class="smoothscroll" href="#education" title=""><i
+									class="fa-solid fa-building-columns"></i>&nbsp;&nbsp;&nbsp;Education</a></li>
+						<li><a class="smoothscroll" href="#publications" title=""><i
+									class="fa-solid fa-book"></i>&nbsp;&nbsp;&nbsp;Publications</a></li>
+						<li><a class="smoothscroll" href="#projects" title=""><i
+									class="fa-solid fa-list-check"></i>&nbsp;&nbsp;&nbsp;Projects</a></li>
+						<li><a class="smoothscroll" href="#awards" title=""><i
+									class="fa-solid fa-award"></i>&nbsp;&nbsp;&nbsp;Awards</a></li>
+						<li><a class="smoothscroll" href="#portfolio" title=""><i
+									class="fa  fa-th-large"></i>&nbsp;&nbsp;&nbsp;Portfolio</a></li>
+						<li><a class="smoothscroll" href="#services" title=""><i
+									class="fa  fa-code"></i>&nbsp;&nbsp;Skills</a></li>
+						<li><a class="smoothscroll" href="#contact" title=""><i
+									class="fa  fa-send"></i>&nbsp;&nbsp;&nbsp;Contact</a></li>
 					</ul>
 				</nav>
 			</div> <!-- /top-bar -->
@@ -269,7 +273,7 @@
 									target="_blank">澳大利亚科廷大学（Curtin）</a> - 设计与建筑环境学院
 							</h4>
 							<p>
-								<h5>研究方向：</h5>GIS 空间分析 | 气候变化与农业
+							<h5>研究方向：</h5>GIS 空间分析 | 气候变化与农业
 							</p>
 						</div>
 					</div> <!-- /timeline-block -->
@@ -286,10 +290,10 @@
 							<h4><a href="https://www.nwafu.edu.cn/" style="color: #313131;text-decoration: underline;"
 									target="_blank">西北农林科技大学（NWAFU）</a> - 资源环境学院 - 土地资源与空间信息技术</h4>
 							<p>
-								<h5>主修课程：</h5>遥感分析原理与方法、土地科学与 3S 技术进展、农业资源与环境科学前沿、高级植物营养学、土壤物理学等。
+							<h5>主修课程：</h5>遥感分析原理与方法、土地科学与 3S 技术进展、农业资源与环境科学前沿、高级植物营养学、土壤物理学等。
 							</p>
 							<p>
-								<h5>研究方向：</h5>气象要素空间插值预测 | 气候变化
+							<h5>研究方向：</h5>气象要素空间插值预测 | 气候变化
 							</p>
 						</div>
 					</div> <!-- /timeline-block -->
@@ -306,10 +310,10 @@
 							<h4><a href="https://www.nnu.edu.cn/" style="color: #313131;text-decoration: underline;"
 									target="_blank">南京师范大学（NNU）</a> - 地理科学学院 & 虚拟地理环境教育部重点实验室 - 地图学与地理信息系统（GIS）</h4>
 							<p>
-								<h5>主修课程：</h5>地理信息系统原理、遥感数字图像处理、虚拟现实与 GIS 新媒体、现代地图学、地理信息系统技术、数值计算、现代自然地理学、GIS 地学分析等。
+							<h5>主修课程：</h5>地理信息系统原理、遥感数字图像处理、虚拟现实与 GIS 新媒体、现代地图学、地理信息系统技术、数值计算、现代自然地理学、GIS 地学分析等。
 							</p>
 							<p>
-								<h5>研究方向：</h5>湖泊水动力数值模型模拟
+							<h5>研究方向：</h5>湖泊水动力数值模型模拟
 							</p>
 						</div>
 					</div> <!-- /timeline-block -->
@@ -326,9 +330,9 @@
 							<h4><a href="https://www.nwafu.edu.cn/" style="color: #313131;text-decoration: underline;"
 									target="_blank">西北农林科技大学（NWAFU）</a> - 资源环境学院 - 地理信息系统（GIS）</h4>
 							<p>
-								<h5>主修课程：</h5>
-								数据库原理与应用、数字测图原理与方法、遥感原理与方法、面向对象程序设计、遥感数字图像处理、地理信息系统、遥感图像分析应用、资源环境信息系统、数字摄影测量学、Web
-								地理信息系统、空间分析与模型等。
+							<h5>主修课程：</h5>
+							数据库原理与应用、数字测图原理与方法、遥感原理与方法、面向对象程序设计、遥感数字图像处理、地理信息系统、遥感图像分析应用、资源环境信息系统、数字摄影测量学、Web
+							地理信息系统、空间分析与模型等。
 							</p>
 						</div>
 					</div> <!-- /timeline-block -->
@@ -365,21 +369,21 @@
 		</div> -->
 	</section>
 
-		<section id="publications">
+	<section id="publications">
 
-			<div class="row section-intro">
-				<div class="col-twelve">
-		
-					<h1>Publications</h1>
-					<h3 style="text-transform: uppercase;">Be better.</h3>
-					<!-- <aside class="pull-quote">
+		<div class="row section-intro">
+			<div class="col-twelve">
+
+				<h1>Publications</h1>
+				<h3 style="text-transform: uppercase;">Be better.</h3>
+				<!-- <aside class="pull-quote">
 						<blockquote>
 							<p>Something more about me!</p>
 						</blockquote>
 					</aside> -->
-		
-				</div>
+
 			</div>
+		</div>
 		<div class="row resume-timeline">
 			<!-- <div class="col-twelve resume-header">
 				<h2>Publications: </h2>
@@ -426,13 +430,13 @@
 				</li>
 			</ul>
 		</div>
-		</section>
+	</section>
 
 	<section id="projects" class="grey-section">
 
 		<div class="row section-intro">
 			<div class="col-twelve">
-	
+
 				<h1>Project Experiences</h1>
 				<!-- <h5>Be better.</h5> -->
 			</div>
@@ -583,7 +587,7 @@
 		</div>
 	</section>
 
-	
+
 	<section id="awards" class="grey-section">
 		<div class="row section-intro">
 			<div class="col-twelve">
@@ -664,12 +668,14 @@
 			<h3>学习活动：</h3>
 			<ul class="disc">
 				<li><a href="https://www.isprs.org/tc4-symposium2024/" target="_blank"><span
-					class="highlight_word">ISPRS 国际学术会议工作人员/志愿者</span>：ISPRS 第四技术委员会，2024 年 10 月 22 日至 25 日，澳大利亚 珀斯 Frementle （2024）</a></li>
+							class="highlight_word">ISPRS 国际学术会议工作人员/志愿者</span>：ISPRS 第四技术委员会，2024 年 10 月 22 日至 25 日，澳大利亚
+						珀斯 Frementle （2024）</a></li>
 				<li><a href="https://ipcannual.com/" target="_blank"><span
-					class="highlight_word">组织国际学术会议，组委会成员</span>：第十届创新生产与建造国际会议（IPC2024），全程参与会议的管理、组织和宣传（2024）</a></li>
+							class="highlight_word">组织国际学术会议，组委会成员</span>：第十届创新生产与建造国际会议（IPC2024），全程参与会议的管理、组织和宣传（2024）</a>
+				</li>
 				<li><a href="https://yongzesong.com/cityplus-2023-committee/" target="_blank"><span
-					class="highlight_word">组织国际学术会议，组委会成员</span>：城市研究国际青年学者会议
-				City+2023@Perth，会议主题为“城市地理空间大数据和人工智能”，全程参与会议的管理、组织和宣传（2023）</a></li>
+							class="highlight_word">组织国际学术会议，组委会成员</span>：城市研究国际青年学者会议
+						City+2023@Perth，会议主题为“城市地理空间大数据和人工智能”，全程参与会议的管理、组织和宣传（2023）</a></li>
 				<li><a href="../images/2023_City+.png" target="_blank"><span class="highlight_word">参加 2023 年澳大利亚珀斯举办的
 							City+ 城市研究国际青年学者会议</span>，并在 “空间分析方法” <span class="highlight_word">分会议上做报告</span>（2023）</a>
 				</li>
