--- a/cn/index.html
+++ b/cn/index.html
@@ -667,11 +667,16 @@
 
 			<h3>学习活动：</h3>
 			<ul class="disc">
+				<li><a href="https://ipcannual.com/" target="_blank"><span
+							class="highlight_word">组织国际学术会议，组委会成员</span>：第十一届创新生产与建造国际会议（IPC2025，2025 年 8 月 4-9
+						日，澳大利亚珀斯），全程参与会议的管理、组织和宣传工作（2025）</a>
+				</li>
 				<li><a href="https://www.isprs.org/tc4-symposium2024/" target="_blank"><span
 							class="highlight_word">ISPRS 国际学术会议工作人员/志愿者</span>：ISPRS 第四技术委员会，2024 年 10 月 22 日至 25 日，澳大利亚
 						珀斯 Frementle （2024）</a></li>
 				<li><a href="https://ipcannual.com/" target="_blank"><span
-							class="highlight_word">组织国际学术会议，组委会成员</span>：第十届创新生产与建造国际会议（IPC2024），全程参与会议的管理、组织和宣传（2024）</a>
+							class="highlight_word">组织国际学术会议，组委会成员</span>：第十届创新生产与建造国际会议（IPC2024，2024 年 7 月 11-12
+						日，澳大利亚珀斯），全程参与会议的管理、组织和宣传工作（2024）</a>
 				</li>
 				<li><a href="https://yongzesong.com/cityplus-2023-committee/" target="_blank"><span
 							class="highlight_word">组织国际学术会议，组委会成员</span>：城市研究国际青年学者会议
