--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!--- basic page needs
    ================================================== -->
 	<meta charset="utf-8">
-	<title>Resume | Kai Ren's Electronic Resume</title>
+	<title>CV | Kai Ren's Electronic Resume</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -752,12 +752,17 @@
 
 			<h3>Activities & Honors: </h3>
 			<ul class="disc">
+				<li><b>2025</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ipcannual.com/" target="_blank">One of the <span
+							class="highlight_word">Organising Committees</span> of 11<sup>th</sup> International
+						Conference on Innovative Production and Construction (IPC2025, 4-9 August 2025, Perth,
+						Australia). </a></li>
 				<li><b>2024</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.isprs.org/tc4-symposium2024/"
 						target="_blank"><span class="highlight_word">Comference Staff</span> of ISPRS Technical
 						Commission IV Symposium 2024. October 22 - 25, 2024, Fremantle, Perth, Australia. </a></li>
 				<li><b>2024</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://ipcannual.com/" target="_blank">One of the <span
 							class="highlight_word">Organising Committees</span> of 10<sup>th</sup> International
-						Conference on Innovative Production and Construction (IPC2024). </a></li>
+						Conference on Innovative Production and Construction (IPC2024, 11-12 July 2024, Perth,
+						Australia). </a></li>
 				<li><b>2023</b>&nbsp;&nbsp;&nbsp;&nbsp;<a href="images/2023_City+.png" target="_blank"><span
 							class="highlight_word">Presentation at the International
 							Conference</span>, City+2023@Perth, at
