--- a/index.html
+++ b/index.html
@@ -416,9 +416,8 @@
 			<!-- <div class="col-twelve resume-header">
 				<h2>Publications: </h2>
 			</div> -->
-
 			<h3>Author: </h3>
-			<ul class="disc">
+			<ul class="disc publication_list">
 				<li><b>Ren, Kai</b> and Swapan, Mohammad and Liu, Hang and Li, Linchao and Mancini, Francesco and Xiao,
 					Zhuoyao and Zhang, Xueyuan and Qu, Rui and Yu, Qiang, <a
 						href="http://dx.doi.org/10.2139/ssrn.4886409" target="_blank"
@@ -430,7 +429,7 @@
 			</ul>
 
 			<h3>Co-author: </h3>
-			<ul class="disc">
+			<ul class="disc publication_list">
 				<li>Yang, L., Luo, P.,
 					Zhang, Z., Song, Y., <b>Ren, K.</b>, Zhang, C., Awange, J.,
 					Atkinson, P.M. and Meng, L., 2024. <a href="https://doi.org/10.1016/j.jag.2024.104068"
@@ -449,7 +448,13 @@
 			</ul>
 
 			<h3>International Conference: </h3>
-			<ul class="disc">
+			<ul class="disc publication_list">
+				<li><b>Ren, K.</b> , Song, Y. and Yu, Q. (2024). <a
+						href="https://agu.confex.com/agu/agu24/meetingapp.cgi/Paper/1760905" target="_blank"
+						style="color:lightseagreen;">Assessing the Impact of ENSO and Indian Ocean Dipole on Australian
+						Bushfires Using RandomForests</a>. <i>2024 American Geophysical Union (AGU24)</i>. Washington,
+					D.C.
+				</li>
 				<li><b>Ren, K.</b> & Song, Y. (2023). <a href="https://yongzesong.com/cityplus-2023-proceedings/"
 						target="_blank" style="color:lightseagreen;">Local spatial heterogeneity of Wheat Yields in
 						Western Australia</a>.
@@ -457,6 +462,69 @@
 						Intelligence for Cities</i>. Perth, Curtin University.
 				</li>
 			</ul>
+
+			<h3>Software Copyright: </h3>
+			<div class="table-responsive">
+				<table>
+					<thead>
+						<tr>
+							<th>Software Name</th>
+							<th>Registration</th>
+							<th>Date</th>
+						</tr>
+					</thead>
+					<tbody style="text-align: center;">
+						<tr>
+							<td><a href="images/SoftwareCopyright/4_GeologicalStructure.jpg" target="_blank">Structural
+									Surface
+									Recognition and Intelligent Analysis System of Layered Geological
+									Body</a></td>
+							<td>2019SR0706808</td>
+							<td>Jul.2019</td>
+						</tr>
+						<tr>
+							<td><a href="images/SoftwareCopyright/1_CBBMSystem.jpg" target="_blank">Dianchi Lake
+									Water Body Cyanobacteria Bloom Drift Simulation System</a></td>
+							<td>2018SR955442</td>
+							<td>Nov.2018</td>
+						</tr>
+						<tr>
+							<td><a href="images/SoftwareCopyright/3_LargeWaterSystem.jpg" target="_blank">Simulation
+									System of
+									Total Suspended Solids in Large Water Bodies</a> </td>
+							<td>2018SR798096</td>
+							<td>Oct.2018</td>
+						</tr>
+						<tr>
+							<td><a href="images/SoftwareCopyright/3_HydroMSystem.jpg" target="_blank">Hydrogeological
+									Modeling and Simulation System</a> </td>
+							<td>2017SR427979</td>
+							<td>Aug.2017</td>
+						</tr>
+						<tr>
+							<td><a href="images/SoftwareCopyright/2_TMASystem.jpg" target="_blank">3D Modeling and
+									Analysis System of Underground Space</a> </td>
+							<td>2017SR431955</td>
+							<td>Aug.2017</td>
+						</tr>
+						<tr>
+							<td><a href="images/SoftwareCopyright/5_Geo_Grid_System.jpg"
+									target="_blank">Multi-Dimensional
+									Grid Adaptive Generation System For Geoscience Simulation</a></td>
+							<td>2017SR374939</td>
+							<td>Jul.2017</td>
+						</tr>
+						<tr>
+							<td><a href="images/SoftwareCopyright/4_GMSDVSystem.jpg" target="_blank">Dynamic
+									Visualization System For
+									Geoscience Model Simulation</a>
+							</td>
+							<td>2017SR374929</td>
+							<td>Jul.2017</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 		</div>
 	</section>
 
@@ -680,75 +748,7 @@
 				<h2>Achievements &amp; Awards</h2>
 			</div> -->
 
-			<h3>Software Copyright: </h3>
-			<div class="table-responsive">
-				<table>
-					<thead>
-						<tr>
-							<th>Software Name</th>
-							<th>Registration</th>
-							<th>Date</th>
-						</tr>
-					</thead>
-					<tbody style="text-align: center;">
-						<tr>
-							<td><a href="images/SoftwareCopyright/4_GeologicalStructure.jpg" target="_blank">Structural
-									Surface
-									Recognition and Intelligent Analysis System of Layered Geological
-									Body</a></td>
-							<td>2019SR0706808</td>
-							<td>Jul.2019</td>
-						</tr>
-						<tr>
-							<td><a href="images/SoftwareCopyright/1_CBBMSystem.jpg" target="_blank">Dianchi Lake
-									Water Body Cyanobacteria Bloom Drift Simulation System</a></td>
-							<td>2018SR955442</td>
-							<td>Nov.2018</td>
-						</tr>
-						<tr>
-							<td><a href="images/SoftwareCopyright/3_LargeWaterSystem.jpg" target="_blank">Simulation
-									System of
-									Total Suspended Solids in Large Water Bodies</a> </td>
-							<td>2018SR798096</td>
-							<td>Oct.2018</td>
-						</tr>
-						<tr>
-							<td><a href="images/SoftwareCopyright/3_HydroMSystem.jpg" target="_blank">Hydrogeological
-									Modeling and Simulation System</a> </td>
-							<td>2017SR427979</td>
-							<td>Aug.2017</td>
-						</tr>
-						<tr>
-							<td><a href="images/SoftwareCopyright/2_TMASystem.jpg" target="_blank">3D Modeling and
-									Analysis System of Underground Space</a> </td>
-							<td>2017SR431955</td>
-							<td>Aug.2017</td>
-						</tr>
-						<tr>
-							<td><a href="images/SoftwareCopyright/5_Geo_Grid_System.jpg"
-									target="_blank">Multi-Dimensional
-									Grid Adaptive Generation System For Geoscience Simulation</a></td>
-							<td>2017SR374939</td>
-							<td>Jul.2017</td>
-						</tr>
-						<tr>
-							<td><a href="images/SoftwareCopyright/4_GMSDVSystem.jpg" target="_blank">Dynamic
-									Visualization System For
-									Geoscience Model Simulation</a>
-							</td>
-							<td>2017SR374929</td>
-							<td>Jul.2017</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-
-			<h3>Skills Certificate: </h3>
-			<ul class="disc">
-				<li>CET-6</li>
-				<li>Level 3 Network Technology Certificate </li>
-				<li>Mandarin First-Class Certificate</li>
-			</ul>
+			<!-- <h3>Software Copyright: </h3> -->
 
 			<h3>Activities & Honors: </h3>
 			<ul class="disc">
@@ -861,6 +861,13 @@
 					</a></li>
 				<li><a href="https://soildoc.renkaigis.cn/" target="_blank">SoilDoctor —— Soil Diagnosis Doctor </a>
 				</li>
+			</ul>
+
+			<h3>Skills Certificate: </h3>
+			<ul class="disc">
+				<li>CET-6</li>
+				<li>Level 3 Network Technology Certificate </li>
+				<li>Mandarin First-Class Certificate</li>
 			</ul>
 
 			<h3>Hobbies: </h3>
