--- a/cn/index.html
+++ b/cn/index.html
@@ -390,7 +390,7 @@
 			</div> -->
 
 			<h3>一作: </h3>
-			<ul class="disc">
+			<ul class="disc publication_list">
 				<li><b>Ren, Kai</b> and Swapan, Mohammad and Liu, Hang and Li, Linchao and Mancini, Francesco and Xiao,
 					Zhuoyao and Zhang, Xueyuan and Qu, Rui and Yu, Qiang, <a
 						href="http://dx.doi.org/10.2139/ssrn.4886409" target="_blank"
@@ -402,7 +402,7 @@
 			</ul>
 
 			<h3>合作: </h3>
-			<ul class="disc">
+			<ul class="disc publication_list">
 				<li>Yang, L., Luo, P.,
 					Zhang, Z., Song, Y., <b>Ren, K.</b>, Zhang, C., Awange, J.,
 					Atkinson, P.M. and Meng, L., 2024. <a href="https://doi.org/10.1016/j.jag.2024.104068"
@@ -421,7 +421,13 @@
 			</ul>
 
 			<h3>国际会议: </h3>
-			<ul class="disc">
+			<ul class="disc publication_list">
+				<li><b>Ren, K.</b> , Song, Y. and Yu, Q. (2024). <a
+						href="https://agu.confex.com/agu/agu24/meetingapp.cgi/Paper/1760905" target="_blank"
+						style="color:lightseagreen;">Assessing the Impact of ENSO and Indian Ocean Dipole on Australian
+						Bushfires Using RandomForests</a>. <i>2024 American Geophysical Union (AGU24)</i>. Washington,
+					D.C.
+				</li>
 				<li><b>Ren, K.</b> & Song, Y. (2023). <a href="https://yongzesong.com/cityplus-2023-proceedings/"
 						target="_blank" style="color:lightseagreen;">Local spatial heterogeneity of Wheat Yields in
 						Western Australia</a>.
@@ -429,6 +435,64 @@
 						Intelligence for Cities</i>. Perth, Curtin University.
 				</li>
 			</ul>
+
+			<h3>软件著作权：</h3>
+			<div class="table-responsive">
+				<table>
+					<thead style="text-align: center;">
+						<tr>
+							<th>名称</th>
+							<th>登记号</th>
+							<th>日期</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td><a href="../images/SoftwareCopyright/4_GeologicalStructure.jpg"
+									target="_blank">《层状地质体结构面识别与智能分析系统》</a></td>
+							<td>2019SR0706808</td>
+							<td>2019.07.09</td>
+						</tr>
+						<tr>
+							<td><a href="../images/SoftwareCopyright/1_CBBMSystem.jpg"
+									target="_blank">《滇池水体蓝藻水华漂移模拟系统》</a></td>
+							<td>2018SR955442</td>
+							<td>2018.11.29</td>
+						</tr>
+						<tr>
+							<td><a href="../images/SoftwareCopyright/3_LargeWaterSystem.jpg"
+									target="_blank">《大型水体总悬浮物模拟系统》</a> </td>
+							<td>2018SR798096</td>
+							<td>2018.10.08</td>
+						</tr>
+						<tr>
+							<td><a href="../images/SoftwareCopyright/3_HydroMSystem.jpg"
+									target="_blank">《水文地质建模与模拟系统》</a> </td>
+							<td>2017SR427979</td>
+							<td>2017.08.07</td>
+						</tr>
+						<tr>
+							<td><a href="../images/SoftwareCopyright/2_TMASystem.jpg"
+									target="_blank">《地下空间三维建模与分析系统》</a> </td>
+							<td>2017SR431955</td>
+							<td>2017.08.06</td>
+						</tr>
+						<tr>
+							<td><a href="../images/SoftwareCopyright/5_Geo_Grid_System.jpg"
+									target="_blank">《地学模拟多维网格自适应生成系统》</a></td>
+							<td>2017SR374939</td>
+							<td>2017.07.17</td>
+						</tr>
+						<tr>
+							<td><a href="../images/SoftwareCopyright/4_GMSDVSystem.jpg"
+									target="_blank">《地学模型模拟动态可视化系统》</a>
+							</td>
+							<td>2017SR374929</td>
+							<td>2017.07.17</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 		</div>
 	</section>
 
@@ -600,71 +664,6 @@
 				<h2>成果奖项（Achievements &amp; Awards）</h2>
 			</div> -->
 
-			<h3>软件著作权：</h3>
-			<div class="table-responsive">
-				<table>
-					<thead style="text-align: center;">
-						<tr>
-							<th>名称</th>
-							<th>登记号</th>
-							<th>日期</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td><a href="../images/SoftwareCopyright/4_GeologicalStructure.jpg"
-									target="_blank">《层状地质体结构面识别与智能分析系统》</a></td>
-							<td>2019SR0706808</td>
-							<td>2019.07.09</td>
-						</tr>
-						<tr>
-							<td><a href="../images/SoftwareCopyright/1_CBBMSystem.jpg"
-									target="_blank">《滇池水体蓝藻水华漂移模拟系统》</a></td>
-							<td>2018SR955442</td>
-							<td>2018.11.29</td>
-						</tr>
-						<tr>
-							<td><a href="../images/SoftwareCopyright/3_LargeWaterSystem.jpg"
-									target="_blank">《大型水体总悬浮物模拟系统》</a> </td>
-							<td>2018SR798096</td>
-							<td>2018.10.08</td>
-						</tr>
-						<tr>
-							<td><a href="../images/SoftwareCopyright/3_HydroMSystem.jpg"
-									target="_blank">《水文地质建模与模拟系统》</a> </td>
-							<td>2017SR427979</td>
-							<td>2017.08.07</td>
-						</tr>
-						<tr>
-							<td><a href="../images/SoftwareCopyright/2_TMASystem.jpg"
-									target="_blank">《地下空间三维建模与分析系统》</a> </td>
-							<td>2017SR431955</td>
-							<td>2017.08.06</td>
-						</tr>
-						<tr>
-							<td><a href="../images/SoftwareCopyright/5_Geo_Grid_System.jpg"
-									target="_blank">《地学模拟多维网格自适应生成系统》</a></td>
-							<td>2017SR374939</td>
-							<td>2017.07.17</td>
-						</tr>
-						<tr>
-							<td><a href="../images/SoftwareCopyright/4_GMSDVSystem.jpg"
-									target="_blank">《地学模型模拟动态可视化系统》</a>
-							</td>
-							<td>2017SR374929</td>
-							<td>2017.07.17</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-
-			<h3>技能证书：</h3>
-			<ul class="disc">
-				<li>英语六级</li>
-				<li>三级网络技术证书</li>
-				<li>普通话一级乙等证书</li>
-			</ul>
-
 			<h3>学习活动：</h3>
 			<ul class="disc">
 				<li><a href="https://ipcannual.com/" target="_blank"><span
@@ -746,6 +745,14 @@
 				<li><a href="https://soildoc.renkaigis.cn/" target="_blank">果土绸缪 —— 土壤诊断医生</a>
 				</li>
 			</ul>
+
+			<h3>技能证书：</h3>
+			<ul class="disc">
+				<li>英语六级</li>
+				<li>三级网络技术证书</li>
+				<li>普通话一级乙等证书</li>
+			</ul>
+
 			<h3>业余爱好： </h3>
 			<ul class="disc">
 				<li><a href="../images/2018_Nanjing_Marathon.jpg" target="_blank">2018 南京马拉松 - 02:10:07</a></li>
